--- a/site.css
+++ b/site.css
@@ -18,23 +18,35 @@ $animation_color: #5D998F;
 }
 
 .stores_banner{
-    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/dgvr_1920x150_banner_directory.jpg);
+    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/ctc_1920x150_banner_directory.jpg);
 }
 
 .events_banner{
-    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/dgvr_1920x150_banner_events.jpg);
+    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/ctc_1920x150_banner_events.jpg);
 }
 
 .dine_banner{
-    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/dgvr_1920x150_banner_dine.jpg);
+    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/ctc_1920x150_banner_dine.jpg);
 }
 
 .jobs_banner{
-    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/1464639425300/banner1.jpg);
+    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/ctc_1920x150_banner_jobs.jpg);
 }
 
 .location_banner{
-    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/1464639425300/banner1.jpg);
+    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/ctc_1920x150_banner_location.jpg);
+}
+
+.peninsula-services{
+    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/ctc_1920x150_banner_services.jpg);
+}
+
+.peninsula-contact-us{
+    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/ctc_1920x150_banner_contact.jpg);
+}
+
+.peninsula-privacy-policy{
+    background-image: url(http://assets.codecloudapp.com/sites/574c69996e6f641030000000/image/jpeg/undefined/ctc_1920x150_banner_privacy.jpg);
 }
 
 
