Peninsula 1.4  /site.css

--- a/site.css
+++ b/site.css
@@ -61,10 +61,12 @@ $animation_color: #6e3835;
 .nav_container {
     width: calc(100% - 230px);
 }
-.feature_row .feature_col {
-    width : 25%;
-    &:last-child {
-        padding-right:0;
+.feature_row {
+    .feature_col {
+        width : 25%;
+        &:last-child {
+            padding-right:0;
+        }
     }
 }
 @media (max-width: 768px) {
