--- a/site.css
+++ b/site.css
@@ -62,7 +62,8 @@ $animation_color: #6e3835;
     width: calc(100% - 230px);
 }
 .feature_row {
-    .feature_row
+    margin-left:auto;
+    margin-right:auto;
     .feature_col {
         width : 25%;
         &:last-child {
