Peninsula 1.4  /coupons.css

--- a/coupons.css
+++ b/coupons.css
@@ -1256,7 +1256,7 @@ div.floating-cart.moveToCart{
         
     }
     .share_tw:hover {
-        background-image: url('http://assets.codecloudapp.com/sites/59d7b1c56e6f64669e8d0000/image/png/1508433249000/social_twitter_org.png');
+        background-image: url('//codecloud.cdn.speedyrails.net/sites/59d7b1c56e6f64669e8d0000/image/png/1508433249000/social_twitter_org.png');
     }
     .share_link {
         background-image: url('http://assets.codecloudapp.com/sites/59d7b1c56e6f64669e8d0000/image/png/1508433186000/social_link_org.png');
