--- a/coupons.css
+++ b/coupons.css
@@ -1263,7 +1263,7 @@ div.floating-cart.moveToCart{
       
     }
     .share_link:hover {
-        background-image: url('http://assets.codecloudapp.com/sites/59d7b1c56e6f64669e8d0000/image/png/1508433186000/social_link_org.png');
+        background-image: url('//codecloud.cdn.speedyrails.net/sites/59d7b1c56e6f64669e8d0000/image/png/1508433186000/social_link_org.png');
     }
 }
 
