Peninsula 1.4  /site.css

--- a/site.css
+++ b/site.css
@@ -73,6 +73,9 @@ body {
         }
     }
 }
+.uploaded-img-responsive {
+    max-width: 100%;
+}
 @media (max-width: 768px) {
     .logo_container {
         width: 330px;
